[package]
name = "zerocache"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
log = "0.4.21"
env_logger = "0.11.3"
actix-governor = "0.5.0"
sled = "0.34.7"
tantivy = "0.25.0"
procfs = "0.18.0"
fs2 = "0.4.3"
fs = "0.0.5"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }